exam  aligns corrected, it should be center.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -401,6 +401,10 @@ p.thought:after {
     font-size: 18pt;
 }
 
+.exam-container p {
+    text-align: center;
+}
+
 .navbar .container {
     width: 100%;
     padding-right: 40px;
